--- a/Server/lib/Web/views/m_layout.pug
+++ b/Server/lib/Web/views/m_layout.pug
@@ -64,9 +64,9 @@ html
 		div#Bottom
 			block Bottom
 			div.bottom-legal
-				a(href='?pc=true')= L('AS_PC')
+				a(href='?pc=true')!= L('AS_PC')
 				br
-				a.bottom-contact(href='http://blog.jjo.kr/', target='_blank')= L('CREATOR')
+				a.bottom-contact(href='http://blog.jjo.kr/', target='_blank')!= L('CREATOR')
 				a.bottom-contact(href='mailto:op@jjo.kr', target='_blank') Contact op@jjo.kr
 			div.bottom-legal!= L('GPL')
 			+separator(40)
