--- a/Server/lib/Web/views/m_portal.pug
+++ b/Server/lib/Web/views/m_portal.pug
@@ -42,8 +42,8 @@ block Middle
 			div.jjoDisplayBar(style='float: left; margin-top: -30px; width: 325px; height: 85px;')
 				button#game-start.jjo-display= L('gameStart')
 	div#menu-bar(style='float: left; margin: 10px 0px 10px calc(50% - 136px); width: 100%;')
-		a(target='_blank', href='//cafe.naver.com/sdbx', style='background-color: #63A95B;')= L('sandbox')
-		a(target='_blank', href='//blog.jjo.kr/', style='background-color: #4078DC;')= L('CREATOR')
+		a(target='_blank', href='//cafe.naver.com/sdbx', style='background-color: #63A95B;')!= L('sandbox')
+		a(target='_blank', href='//blog.jjo.kr/', style='background-color: #4078DC;')!= L('CREATOR')
 	div(style='float: left; margin-left: calc(50% - 160px);')
 		div.server-list-box
 			h3.server-list-title
